--- a/style.css
+++ b/style.css
@@ -14,3 +14,8 @@
   background-color: #282d32;
 }
 
+@media (max-width: 767px) {
+        .hidden-mobile {
+          display: none;
+        }
+      }
