--- a/style.css
+++ b/style.css
@@ -3,19 +3,65 @@
 }
 
 .card {
-  background-color: #282d32;
+  background-color: #2c394b;
 }
 
 .pad-top {
   padding-top: 5rem;
 }
 
+.image {
+  background-color: #2c394b;
+}
+
 .bg-section {
-  background-color: #282d32;
+  background-color: #2c394b;
+}
+
+.bg-gelap {
+  background-color: #082032;
+}
+
+.verdana {
+  font-family: Verdana;
+}
+.tahoma {
+  font-family: Tahoma;
+}
+
+.margin {
+  margin-left: 3rem;
+}
+
+.text {
+  color: #8296a3;
+}
+
+.btn-email {
+  background-color: #ff4c29;
+  font-weight: bold;
+  color: white;
+  height: 55px;
+  width: 150px;
+}
+
+.btn-social {
+  background-color: #082032;
+  font-weight: bold;
+  color: white;
+  height: 55px;
+  width: 75px;
+  padding-top: 10px;
+}
+.btn-social:hover {
+  background-color: #ff4c29;
 }
 
 @media (max-width: 767px) {
-        .hidden-mobile {
-          display: none;
-        }
-      }
+  .hidden-mobile {
+    display: none;
+  }
+  .margin {
+    margin-left: 0rem;
+  }
+}
