--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  padding-top: 6rem;
+  padding-top: 5rem;
 }
 
 .card {
@@ -8,6 +8,14 @@
 
 .pad-top {
   padding-top: 5rem;
+}
+
+.image-banner {
+  background-color: #2c394b;
+  height: auto;
+  width: 100%;
+  max-height: 300px;
+  max-width: 300px;
 }
 
 .image {
@@ -57,11 +65,159 @@
   background-color: #ff4c29;
 }
 
-@media (max-width: 767px) {
-  .hidden-mobile {
-    display: none;
-  }
+/* body {
+  overflow-x: hidden;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+nav {
+  display: flex;
+  background-color: #082032;
+  justify-content: space-around;
+  padding: 20px 0;
+  font-family: "Urbanist", sans-serif;
+  height: 75px;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  width: 25%;
+  justify-content: space-between;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: #ff4c29;
+  text-decoration: none;
+}
+
+/* Hamburger Menu */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  height: 20px;
+  justify-content: space-between;
+  position: relative;
+  z-index: 2;
+}
+
+.menu-toggle input:hover ~ span:nth-child(2) {
+  background-color: #ff4c29;
+}
+
+.menu-toggle input:hover ~ span:nth-child(3) {
+  background-color: #ff4c29;
+}
+
+.menu-toggle input:hover ~ span:nth-child(4) {
+  background-color: #ff4c29;
+}
+
+.menu-toggle input {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: -6px;
+  top: -9px;
+  opacity: 0; /*0.8*/
+  cursor: pointer;
+  z-index: 3;
+}
+
+.menu-toggle span {
+  display: block;
+  width: 28px;
+  height: 3px;
+  background-color: white;
+  border-radius: 3px;
+  transition: all 0.5s;
+}
+
+/* Hamburger Menu Animation */
+.menu-toggle span:nth-child(2) {
+  transform-origin: 0 0;
+}
+
+.menu-toggle span:nth-child(4) {
+  transform-origin: 0 100%;
+}
+
+.menu-toggle input:checked ~ span:nth-child(2) {
+  transform: rotate(45deg) translate(-1px, -1px);
+}
+
+.menu-toggle input:checked ~ span:nth-child(4) {
+  transform: rotate(-45deg) translate(-1px, 0);
+}
+
+.menu-toggle input:checked ~ span:nth-child(3) {
+  opacity: 0;
+  transform: scale(0);
+}
+
+/* tablet size */
+
+@media (max-width: 768px) {
   .margin {
     margin-left: 0rem;
+  }
+  nav ul {
+    width: 50%;
+  }
+}
+
+/* mobile size */
+
+@media (max-width: 576px) {
+  .margin {
+    margin-left: 0rem;
+  }
+  .jumbotron {
+    padding-top: 0;
+  }
+  .pad-top {
+    padding-top: 2rem;
+  }
+  .image-banner {
+    height: auto;
+    width: 100%;
+    max-height: 200px;
+    max-width: 200px;
+  }
+  nav ul {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 185px;
+    height: 60%;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+    background-color: #334756;
+    transform: translateY(-100%);
+    transition: all 1s;
+    opacity: 0;
+  }
+
+  nav ul.slide {
+    opacity: 1;
+    transform: translateY(0);
+    width: 185px;
+    height: 60%;
+    padding: 0rem;
+  }
+  .menu-toggle {
+    display: flex;
   }
 }
