--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav {
   display: flex;
   background-color: #082032;
   justify-content: space-around;
-  padding: 20px 0;
+  padding: 0 0;
   font-family: "Urbanist", sans-serif;
   height: 75px;
   align-items: center;
@@ -183,7 +183,7 @@ nav ul li a:hover {
     margin-left: 0rem;
   }
   .jumbotron {
-    padding-top: 0;
+    padding-top: 2rem;
   }
   .pad-top {
     padding-top: 2rem;
