--- a/style.css
+++ b/style.css
@@ -10,12 +10,69 @@
   padding-top: 5rem;
 }
 
+.pad-top2 {
+  padding-top: 5rem;
+}
+
 .image-banner {
-  background-color: #2c394b;
   height: auto;
   width: 100%;
   max-height: 300px;
   max-width: 300px;
+}
+
+.layer-0 {
+  position: relative;
+  z-index: 4;
+  margin-top: 5%;
+  margin-left: -15%;
+}
+
+.layer-1 {
+  position: relative;
+  z-index: 5;
+  width: 200px;
+  height: 200px;
+  margin-top: -20%;
+  margin-left: 15%;
+  transform-origin: 22% 32%;
+  animation: triangle 1.5s ease-in-out 1;
+  animation-delay: 0.5s;
+}
+.layer-2 {
+  position: relative;
+  z-index: 2;
+  width: 230px;
+  height: 230px;
+  margin-top: -85%;
+  margin-left: 40%;
+}
+.layer-3 {
+  background-color: #2c394b;
+  position: relative;
+  z-index: 1;
+  width: 273px;
+  height: 235px;
+  margin-top: -32%;
+  margin-left: 18%;
+}
+.layer-3a {
+  position: relative;
+  z-index: 2;
+  width: 180px;
+  height: 100px;
+  margin-top: -52%;
+  margin-left: 0%;
+  transform: rotate(-27deg) translate(-1px, 0);
+}
+.layer-3b {
+  position: relative;
+  z-index: 3;
+  width: 100px;
+  height: 100px;
+  margin-top: -15%;
+  margin-left: 10%;
+  transform: rotate(-27deg) translate(-1px, 0);
 }
 
 .image {
@@ -108,7 +165,7 @@ nav ul li a:hover {
   height: 20px;
   justify-content: space-between;
   position: relative;
-  z-index: 2;
+  z-index: 7;
 }
 
 .menu-toggle input:hover ~ span:nth-child(2) {
@@ -186,13 +243,20 @@ nav ul li a:hover {
     padding-top: 2rem;
   }
   .pad-top {
-    padding-top: 2rem;
+    padding: 14rem 2rem 1rem 2rem;
+  }
+  .pad-top2 {
+    padding: 1rem 0.5rem 1rem 1rem;
   }
   .image-banner {
     height: auto;
     width: 100%;
     max-height: 200px;
     max-width: 200px;
+  }
+
+  nav {
+    display: none;
   }
   nav ul {
     position: absolute;
@@ -203,7 +267,7 @@ nav ul li a:hover {
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
+    z-index: 6;
     background-color: #334756;
     transform: translateY(-100%);
     transition: all 1s;
@@ -219,5 +283,88 @@ nav ul li a:hover {
   }
   .menu-toggle {
     display: flex;
+  }
+
+  .layer-0 {
+    position: relative;
+    z-index: 4;
+    margin-top: 20%;
+    margin-left: 0%;
+  }
+
+  .layer-1 {
+    position: relative;
+    z-index: 5;
+    width: 160px;
+    height: 160px;
+    margin-top: -25%;
+    margin-left: 15%;
+    transform-origin: 22% 32%;
+    animation: triangle 1.5s ease-in-out 1;
+    animation-delay: 0.5s;
+  }
+  .layer-2 {
+    position: relative;
+    z-index: 2;
+    width: 200px;
+    height: 200px;
+    margin-top: -85%;
+    margin-left: 40%;
+  }
+  .layer-3 {
+    background-color: #2c394b;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 320px;
+    margin-top: -65%;
+    margin-left: 0%;
+  }
+  .layer-3a {
+    position: relative;
+    z-index: 2;
+    width: 180px;
+    height: 100px;
+    margin-top: -82%;
+    margin-left: 0%;
+    transform: rotate(-27deg) translate(-1px, 0);
+  }
+  .layer-3b {
+    position: relative;
+    z-index: 3;
+    width: 100px;
+    height: 100px;
+    margin-top: -20%;
+    margin-left: 10%;
+    transform: rotate(-27deg) translate(-1px, 0);
+  }
+}
+
+.btn-animate {
+  animation: myAnim 0.2s ease-in-out 3;
+  animation-delay: 2s;
+}
+
+@keyframes myAnim {
+  0% {
+    transform: rotate(0) /*translate(-1px, -1px)*/;
+  }
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(0);
+  }
+  75% {
+    transform: rotate(-3deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
+
+@keyframes triangle {
+  0% {
+    transform: rotate(-360deg);
   }
 }
