--- a/style.css
+++ b/style.css
@@ -240,10 +240,10 @@ nav ul li a:hover {
     margin-left: 0rem;
   }
   .jumbotron {
-    padding-top: 2rem;
+    padding-top: 0rem;
   }
   .pad-top {
-    padding: 14rem 2rem 1rem 2rem;
+    padding: 2rem 2rem 1rem 2rem;
   }
   .pad-top2 {
     padding: 1rem 0.5rem 1rem 1rem;
@@ -287,7 +287,7 @@ nav ul li a:hover {
 
   .layer-0 {
     position: relative;
-    z-index: 4;
+    z-index: 2;
     margin-top: 20%;
     margin-left: 0%;
   }
@@ -297,46 +297,44 @@ nav ul li a:hover {
     z-index: 5;
     width: 160px;
     height: 160px;
-    margin-top: -25%;
-    margin-left: 15%;
+    margin-top: -20%;
+    margin-left: 20%;
     transform-origin: 22% 32%;
     animation: triangle 1.5s ease-in-out 1;
     animation-delay: 0.5s;
   }
   .layer-2 {
     position: relative;
-    z-index: 2;
-    width: 200px;
-    height: 200px;
-    margin-top: -85%;
-    margin-left: 40%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin-top: -70%;
+    margin-left: 50%;
   }
   .layer-3 {
-    background-color: #2c394b;
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 320px;
-    margin-top: -65%;
-    margin-left: 0%;
+    display: none;
   }
   .layer-3a {
     position: relative;
-    z-index: 2;
+    z-index: 1;
     width: 180px;
     height: 100px;
-    margin-top: -82%;
-    margin-left: 0%;
+    margin-top: -50%;
+    margin-left: 5%;
     transform: rotate(-27deg) translate(-1px, 0);
   }
   .layer-3b {
     position: relative;
-    z-index: 3;
+    z-index: 1;
     width: 100px;
     height: 100px;
-    margin-top: -20%;
-    margin-left: 10%;
+    margin-top: -5%;
+    margin-left: 7%;
     transform: rotate(-27deg) translate(-1px, 0);
+  }
+  .bg-banner {
+    background-color: #2c394b;
+    height: 20rem;
   }
 }
 
