--- a/style.css
+++ b/style.css
@@ -251,8 +251,10 @@ nav ul li a:hover {
     padding-top: 0rem;
   }
   .pad-top {
+    padding-top: 2rem;
   }
   .pad-top2 {
+    padding-top: 2rem;
   }
   .image-banner {
     height: auto;
