--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
   height: 200px;
   margin-top: -20%;
   margin-left: 15%;
-  transform-origin: 22% 32%;
+/*   transform-origin: 22% 32%; */
   transform-style: preserve-3d;
   transform: translateZ(100px);
   animation: triangle 1.5s ease-in-out 1;
