--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@
 }
 
 .layer-0 {
-  position: relative;
-  z-index: 4;
+  position: absolute;
   margin-top: 5%;
   margin-left: -15%;
   transform-style: preserve-3d;
@@ -31,8 +30,7 @@
 }
 
 .layer-1 {
-  position: relative;
-  z-index: 5;
+  position: absolute;
   width: 200px;
   height: 200px;
   margin-top: -20%;
