--- a/style.css
+++ b/style.css
@@ -23,21 +23,19 @@
 
 .layer-0 {
   position: relative;
+  z-index: 4;
   margin-top: 5%;
   margin-left: -15%;
-  transform-style: preserve-3d;
-  transform: translateZ(100px);
 }
 
 .layer-1 {
   position: relative;
+  z-index: 5;
   width: 200px;
   height: 200px;
   margin-top: -20%;
   margin-left: 15%;
-/*   transform-origin: 22% 32%; */
-  transform-style: preserve-3d;
-  transform: translateZ(100px);
+  transform-origin: 22% 32%;
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
 }
@@ -74,7 +72,8 @@
   height: 100px;
   margin-top: -15%;
   margin-left: 10%;
-  transform: rotate(-27deg) translate(-1px, 0);
+  transform: rotate(-27deg) translate3d(-1px, 0, 100px);
+/*   transform-style: preserve-3d; */
 }
 
 .image {
