--- a/style.css
+++ b/style.css
@@ -21,11 +21,16 @@
   max-width: 300px;
 }
 
+.layer {
+  transform-style: preserve-3d;
+}
+
 .layer-0 {
   position: relative;
   z-index: 4;
   margin-top: 5%;
   margin-left: -15%;
+  transform: translateZ(100px);
 }
 
 .layer-1 {
@@ -35,7 +40,8 @@
   height: 200px;
   margin-top: -20%;
   margin-left: 15%;
-  transform-origin: translate3d(22%, 32%, 100px);
+  transform-origin: 22% 32%;
+  transform: translateZ(20px);
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
 }
