--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@
   z-index: 4;
   margin-top: 5%;
   margin-left: -15%;
-  transform: translateZ(100px);
 }
 
 .layer-1 {
@@ -41,7 +40,7 @@
   margin-top: -20%;
   margin-left: 15%;
   transform-origin: 22% 32%;
-  transform: translateZ(20px);
+  transform: translateZ(30px);
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
 }
@@ -52,6 +51,7 @@
   height: 230px;
   margin-top: -85%;
   margin-left: 40%;
+  transform: translateZ(20px);
 }
 .layer-3 {
   background-color: #2c394b;
@@ -78,7 +78,7 @@
   height: 100px;
   margin-top: -15%;
   margin-left: 10%;
-  transform: rotate(-27deg) translate(-1px, 0);
+  transform: rotate(-27deg) translate3d(-1px, 0, 50px);
 /*   transform-style: preserve-3d; */
 }
 
