--- a/style.css
+++ b/style.css
@@ -21,16 +21,11 @@
   max-width: 300px;
 }
 
-.layer {
-  transform-style: preserve-3d;
-}
-
 .layer-0 {
   position: relative;
   z-index: 4;
   margin-top: 5%;
   margin-left: -15%;
-  transform: translateZ(30px);
 }
 
 .layer-1 {
@@ -41,6 +36,7 @@
   margin-top: -20%;
   margin-left: 15%;
   transform-origin: 22% 32%;
+  transform-style: preserve-3d;
   transform: translateZ(30px);
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
@@ -52,7 +48,6 @@
   height: 230px;
   margin-top: -85%;
   margin-left: 40%;
-  transform: translateZ(20px);
 }
 .layer-3 {
   background-color: #2c394b;
@@ -79,7 +74,7 @@
   height: 100px;
   margin-top: -15%;
   margin-left: 10%;
-  transform: rotate(-27deg) translate3d(-1px, 0, 50px);
+  transform: rotate(-27deg) translate(-1px, 0);
 /*   transform-style: preserve-3d; */
 }
 
