--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@
   height: 100px;
   margin-top: -15%;
   margin-left: 10%;
-  transform: rotate(-27deg) translate3d(-1px, 0, 25px);
-/*   transform-style: preserve-3d; */
+  transform: translate3d(-1px, 0, 25px) rotate(-27deg) ;
+  transform-style: preserve-3d;
 }
 
 .image {
