--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@
   height: 200px;
   margin-top: -20%;
   margin-left: 0%;
-  transform: translateZ(50px);
-  transform-style: preserve-3d;
+  transform-origin: 22% 32%;
+/*   transform-style: preserve-3d; */
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
-/*   22%, 32%,  */
+/*     */
 }
 .layer-2 {
   position: relative;
