--- a/style.css
+++ b/style.css
@@ -35,11 +35,9 @@
   height: 200px;
   margin-top: -20%;
   margin-left: 0%;
-/*   transform-origin: 22% 32%; */
-/*   transform-style: preserve-3d; */
+  transform-origin: 22% 32%;
   animation: triangle 1.5s ease-in-out 1;
   animation-delay: 0.5s;
-/*     */
 }
 .layer-2 {
   position: relative;
