--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@
   height: 230px;
   margin-top: -85%;
   margin-left: 40%;
+  transform-origin: 22% 32%;
+  animation: triangle 1.5s ease-in-out 1;
 }
 .layer-3 {
   background-color: #2c394b;
