--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
   margin-left: 10%;
   transform-origin: 10% 20%;
   animation: triangle 1.5s ease-in-out 1;
+  animation-delay: 1s;
 }
 .layer-2 {
   position: relative;
@@ -45,8 +46,6 @@
   height: 230px;
   margin-top: -85%;
   margin-left: 40%;
-  transform-origin: 22% 32%;
-  animation: triangle 1.5s ease-in-out 1;
 }
 .layer-3 {
   background-color: #2c394b;
@@ -374,6 +373,6 @@ nav ul li a:hover {
 
 @keyframes triangle {
   0% {
-    transform: rotate(-360deg);
+    transform: rotate(-180deg);
   }
 }
