--- a/style.css
+++ b/style.css
@@ -373,6 +373,7 @@ nav ul li a:hover {
 
 @keyframes triangle {
   100% {
+    -webkit-transform: rotate(-360deg);
     transform: rotate(-360deg);
   }
 }
