--- a/style.css
+++ b/style.css
@@ -373,6 +373,9 @@ nav ul li a:hover {
 
 @keyframes triangle {
   0% {
-    transform: rotate(-350deg);
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-360deg);
   }
 }
