--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
   height: 100px;
   margin-top: -52%;
   margin-left: 0%;
-  transform: rotate(-27deg) translate(-1px, 0);
+  transform: translate(-1px, 0);
 }
 .layer-3b {
   position: relative;
