--- a/style.css
+++ b/style.css
@@ -378,9 +378,9 @@ nav ul li a:hover {
 
 @keyframes triangle {
   0% {
-    transform: rotate(0);
+    transform: translateZ(50px) rotate(0);
   }
   100% {
-    transform: rotate(360deg);
+    transform: translateZ(50px) rotate(360deg);
   }
 }
