--- a/style.css
+++ b/style.css
@@ -82,6 +82,16 @@
   transform: translate3d(-1px, 0, 100px);
 }
 
+.layer-4 {
+  position: relative;
+  z-index: 2;
+  width: 100px;
+  height: 100px;
+  margin-top: -85%;
+  margin-left: 50%;
+  transform: translateZ(50px);
+}
+
 .image {
   background-color: #2c394b;
 }
