--- a/style.css
+++ b/style.css
@@ -321,20 +321,15 @@ nav ul li a:hover {
   .layer-1 {
     position: relative;
     z-index: 5;
-    width: 160px;
-    height: 160px;
     margin-top: -20%;
-    margin-left: 0%;
-    transform-origin: 22% 32%;
-    animation: triangle 1.5s ease-in-out 1;
-    animation-delay: 0.5s;
+    margin-left: 15%;
   }
   .layer-2 {
     position: relative;
     z-index: 1;
     width: 150px;
     height: 150px;
-    margin-top: -70%;
+    margin-top: -80%;
     margin-left: 50%;
   }
   .layer-3 {
@@ -347,7 +342,7 @@ nav ul li a:hover {
     height: 100px;
     margin-top: -60%;
     margin-left: 5%;
-    transform: rotate(-27deg) translate(-1px, 0);
+    transform: translate(-1px, 0);
   }
   .layer-3b {
     position: relative;
@@ -356,7 +351,7 @@ nav ul li a:hover {
     height: 80px;
     margin-top: -20%;
     margin-left: 15%;
-    transform: rotate(-27deg) translate(-1px, 0);
+    transform: translate(-1px, 0);
   }
   .bg-banner {
     background-color: #2c394b;
