--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@
   transform: translateZ(80px);
   filter: blur(0.1rem);
 }
-}
 
 .image {
   background-color: #2c394b;
@@ -352,6 +351,9 @@ nav ul li a:hover {
     margin-top: -20%;
     margin-left: 15%;
     transform: translate(-1px, 0);
+  }
+  .layer-4 {
+    margin-left: 23%;
   }
   .bg-banner {
     background-color: #2c394b;
