--- a/style.css
+++ b/style.css
@@ -353,7 +353,12 @@ nav ul li a:hover {
     transform: translate(-1px, 0);
   }
   .layer-4 {
-    margin-left: 30%;
+    position: relative;
+    z-index: 3;
+    margin-top: -20%;
+    margin-left: 50%;
+    transform: translateZ(80px);
+    filter: blur(0.1rem);
   }
   .bg-banner {
     background-color: #2c394b;
